--- a/kubernetes/example.yaml
+++ b/kubernetes/example.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: proxy
@@ -30,7 +30,7 @@ spec:
             requests:
               cpu: 25m
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -71,7 +71,7 @@ spec:
             requests:
               cpu: 25m
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
